--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -1723,6 +1723,7 @@
     <Content Include="Views\Reports\Top10CostReport.cshtml" />
     <Content Include="Views\Reports\Top10DiseasesReport.cshtml" />
     <Content Include="Views\Reports\Top10RequestReport.cshtml" />
+    <Content Include="Views\Letters\ExportSuratIzinSakit2Pdf.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
