--- a/Klinik.Common/Klinik.Common.csproj
+++ b/Klinik.Common/Klinik.Common.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Enumerations\RegistrationStatusEnum.cs" />
     <Compile Include="Enumerations\RegistrationTypeEnum.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="HighchartsClient.cs" />
     <Compile Include="OrganizationData.cs" />
     <Compile Include="Paging\IPagedList.cs" />
     <Compile Include="Paging\PagedList.cs" />
