--- a/Klinik.Web/packages.config
+++ b/Klinik.Web/packages.config
@@ -17,6 +17,7 @@
   <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net461" />
   <package id="FastMember" version="1.3.0" targetFramework="net461" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
+  <package id="highcharts-export-client" version="1.0.37" targetFramework="net461" />
   <package id="jQuery" version="3.0.0" targetFramework="net461" />
   <package id="jQuery.UI" version="1.12.1.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
