Refactor and Develop Top10 Referal Report

--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Account\ResetPasswordModel.cs" />
     <Compile Include="Administration\LogModel.cs" />
     <Compile Include="AppointmentEntities\AppointmentModel.cs" />
+    <Compile Include="BaseChartModel.cs" />
+    <Compile Include="BaseReportLogModel.cs" />
     <Compile Include="BaseReportModel.cs" />
     <Compile Include="BaseRequest.cs" />
     <Compile Include="BaseModel.cs" />
@@ -163,6 +165,10 @@
     <Compile Include="Reports\DataModel\RequestReportDataModel.cs" />
     <Compile Include="Reports\Parameters\Top10CostParamModel.cs" />
     <Compile Include="Reports\ReportLogModel.cs" />
+    <Compile Include="Reports\ReportLog\Top10DiseaseChartModel.cs" />
+    <Compile Include="Reports\ReportLog\Top10DiseaseLogParam.cs" />
+    <Compile Include="Reports\ReportLog\Top10ReferalChartModel.cs" />
+    <Compile Include="Reports\ReportLog\Top10ReferalLogParam.cs" />
     <Compile Include="Reports\Top10CostReportModel.cs" />
     <Compile Include="Reports\Top10DiseaseReportModel.cs" />
     <Compile Include="Reports\Parameters\Top10DiseasesParamModel.cs" />
