--- a/Klinik.Data/Klinik.Data.csproj
+++ b/Klinik.Data/Klinik.Data.csproj
@@ -134,6 +134,9 @@
     <Compile Include="DataRepository\HistoryProductInGudang.cs">
       <DependentUpon>KlinikModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DataRepository\Hospital.cs">
+      <DependentUpon>KlinikModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DataRepository\ICDTheme.cs">
       <DependentUpon>KlinikModel.tt</DependentUpon>
     </Compile>
