--- a/Klinik.Features/Klinik.Features.csproj
+++ b/Klinik.Features/Klinik.Features.csproj
@@ -314,7 +314,12 @@
     <Compile Include="Radiologi\RadiologiRequest.cs" />
     <Compile Include="Radiologi\RadiologiResponse.cs" />
     <Compile Include="Radiologi\RadiologiValidator.cs" />
+    <Compile Include="Reports\Helper\ReportHelperOptions.cs" />
     <Compile Include="Reports\Helper\ReportLogHelper.cs" />
+    <Compile Include="Reports\Helper\Top10CostHelper.cs" />
+    <Compile Include="Reports\Helper\Top10DiseaseHelper.cs" />
+    <Compile Include="Reports\Helper\Top10ReferalHelper.cs" />
+    <Compile Include="Reports\Helper\Top10RequestHelper.cs" />
     <Compile Include="Reports\ReportLog\ReportLogHandler.cs" />
     <Compile Include="Reports\ReportLog\ReportLogRequest.cs" />
     <Compile Include="Reports\ReportLog\ReportLogResponse.cs" />
