--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Account\PasswordHistoryModel.cs" />
     <Compile Include="Account\ResetPasswordModel.cs" />
     <Compile Include="Administration\LogModel.cs" />
+    <Compile Include="Administration\LogonUserModel.cs" />
     <Compile Include="AppointmentEntities\AppointmentModel.cs" />
     <Compile Include="BaseChartModel.cs" />
     <Compile Include="BaseReportLogModel.cs" />
@@ -160,11 +161,8 @@
     <Compile Include="PurchaseRequestPusatDetail\PurchaseRequestPusatDetailModel.cs" />
     <Compile Include="PurchaseRequestPusat\PurchaseRequestPusatModel.cs" />
     <Compile Include="PurchaseRequest\PurchaseRequestModel.cs" />
-
     <Compile Include="RealisasiSuratRujukanEntities\RealisasiSuratRujukanModel.cs" />
-
     <Compile Include="Reports\DataModel\CostReportDataModel.cs" />
-
     <Compile Include="Reports\DataModel\DiseaseReportDataModel.cs" />
     <Compile Include="Reports\DataModel\ReferalReportDataModel.cs" />
     <Compile Include="Reports\DataModel\RequestReportDataModel.cs" />
