--- a/Klinik.Data/App.Config
+++ b/Klinik.Data/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.KlinikModel.csdl|res://*/DataRepository.KlinikModel.ssdl|res://*/DataRepository.KlinikModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=klinikdbuat.database.windows.net;initial catalog=KlinikDB;user id=AdminDB;password=Admin2019;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.KlinikModel.csdl|res://*/DataRepository.KlinikModel.ssdl|res://*/DataRepository.KlinikModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-12R6UBT\SQLEXPRESS;initial catalog=KlinikDBV1;user id=sa;password=4q1coid;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
