--- a/Klinik.Web/Web.config
+++ b/Klinik.Web/Web.config
@@ -10,9 +10,9 @@
   </configSections>
   <connectionStrings>
 
-    <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.KlinikModel.csdl|res://*/DataRepository.KlinikModel.ssdl|res://*/DataRepository.KlinikModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=klinikdbuat.database.windows.net;initial catalog=KlinikDB;user id=AdminDB;password=Admin2019;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />        
+    <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.KlinikModel.csdl|res://*/DataRepository.KlinikModel.ssdl|res://*/DataRepository.KlinikModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-12R6UBT\SQLEXPRESS;initial catalog=KlinikDBV1;user id=sa;password=4q1coid;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />        
 
-    <add name="ReportConnection" connectionString="data source=klinikdbuat.database.windows.net;initial catalog=KlinikDB;user id=AdminDB;password=Admin2019;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ReportConnection" connectionString="data source=DESKTOP-12R6UBT\SQLEXPRESS;initial catalog=KlinikDBV1;user id=sa;password=4q1coid;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 
     <!--<add name="ReportConnection" connectionString="data source=DESKTOP-KAL61S1\SQLSVR2017;initial catalog=KlinikDB;user id=sa;password=Green123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
