--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -160,20 +160,21 @@
     <Compile Include="PurchaseRequestPusatDetail\PurchaseRequestPusatDetailModel.cs" />
     <Compile Include="PurchaseRequestPusat\PurchaseRequestPusatModel.cs" />
     <Compile Include="PurchaseRequest\PurchaseRequestModel.cs" />
-
     <Compile Include="RealisasiSuratRujukanEntities\RealisasiSuratRujukanModel.cs" />
-
     <Compile Include="Reports\DataModel\CostReportDataModel.cs" />
-
     <Compile Include="Reports\DataModel\DiseaseReportDataModel.cs" />
     <Compile Include="Reports\DataModel\ReferalReportDataModel.cs" />
     <Compile Include="Reports\DataModel\RequestReportDataModel.cs" />
     <Compile Include="Reports\Parameters\Top10CostParamModel.cs" />
     <Compile Include="Reports\ReportLogModel.cs" />
+    <Compile Include="Reports\ReportLog\Top10CostChartModel.cs" />
+    <Compile Include="Reports\ReportLog\Top10CostLogParam.cs" />
     <Compile Include="Reports\ReportLog\Top10DiseaseChartModel.cs" />
     <Compile Include="Reports\ReportLog\Top10DiseaseLogParam.cs" />
     <Compile Include="Reports\ReportLog\Top10ReferalChartModel.cs" />
     <Compile Include="Reports\ReportLog\Top10ReferalLogParam.cs" />
+    <Compile Include="Reports\ReportLog\Top10RequestChartModel.cs" />
+    <Compile Include="Reports\ReportLog\Top10RequestLogParam.cs" />
     <Compile Include="Reports\Top10CostReportModel.cs" />
     <Compile Include="Reports\Top10DiseaseReportModel.cs" />
     <Compile Include="Reports\Parameters\Top10DiseasesParamModel.cs" />
